# fap

./: items_views.py  main.py  pyproject.toml
alembic/: env.py  help.txt
alembic/versions/: 2023_12_15_1149-dc587c803db8_migrate_1.py  2023_12_15_1519-40b9e69079c8_create_user_tables.py  2023_12_15_1548-bc256c764b23_create_profile_tables.py
api_v1/: __init__.py
api_v1/product/: view.py
core/: config.py
core/models/: __init__.py  mixins.py  product.py  profile.py  user.py
users/: schemas.py  views.py
